--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.2.5",
-  "description": "A sample Node.js app using Express 4",
+  "name": "nobubot",
+  "version": "2.0.0",
+  "description": "A discord bot",
   "engines": {
     "node": "6.5.0",
     "npm": "3.10.6"
