--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "discord.js": "10.0.0",
     "express": "^4.14.0",
     "nani": "^1.2.0",
-    "request": "request/request"
+    "request": "2.76.0"
   },
   "keywords": [
     "node",
