--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "nani": "^1.2.0",
     "request": "2.76.0"
+    "imgur-node-api": "0.1.0"
   },
   "keywords": [
     "node",
