added Misc stuffs, and single-command help

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nani": "^1.2.0",
     "request": "2.76.0",
     "imgur-node-api": "0.1.0",
-    "flip-text": "1.1.0"
+    "flip-text": "1.1.0",
+    "cleverbot-node": "0.2.2"
   },
   "keywords": [
     "node",
