--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "request": "2.76.0",
     "imgur-node-api": "0.1.0",
     "flip-text": "1.1.0",
-    "cleverbot-node": "0.2.2"
+    "cleverbot-node": "0.2.2",
+    "html-entities": "1.2.0"
   },
   "keywords": [
     "node",
