--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "flip-text": "^1.1.0",
     "google-translate-api": "^2.2.2",
     "html-entities": "^1.2.0",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "canvas": "^1.6.2",
+    "redis": "^2.6.3"
   },
   "keywords": [
     "node",
