--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "html-entities": "^1.2.0",
     "request": "^2.79.0",
     "redis": "^2.6.3",
-    "canvas-heroku": "^0.12.0"
+    "canvas": "^1.6.4"
   },
   "keywords": [
     "node",
