--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "canvas": "^1.6.7",
     "discord.js": "11.1.0",
     "flip-text": "^1.1.0",
+    "gifencoder": "^1.1.0",
     "google-translate-api": "arthurlacoste/google-translate-api",
     "html-entities": "^1.2.0",
-    "request": "^2.79.0",
     "redis": "^2.6.3",
-    "canvas": "^1.6.4"
+    "request": "^2.79.0"
   },
   "keywords": [
     "node",
