--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "flip-text": "^1.1.0",
+    "gifencoder": "^1.1.0",
     "google-translate-api": "arthurlacoste/google-translate-api",
     "html-entities": "^1.2.0",
     "redis": "^2.6.3",
